Fix spacing

--- a/components/logo/topLogo.module.css
+++ b/components/logo/topLogo.module.css
@@ -3,6 +3,6 @@
   font-size: calc(10px + 10vw);
   color: #8697a6;
   letter-spacing: 1px;
-  margin-top: 2%;
-  margin-bottom: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
